Correct translation for the HomePage

--- a/JobTracker/src/net/greenbeansit/jobtracker/client/localization/HomePageConstants_de.properties
+++ b/JobTracker/src/net/greenbeansit/jobtracker/client/localization/HomePageConstants_de.properties
@@ -8,7 +8,7 @@ headingSelectTask = Task
 buttonTemplateText = Vorlagen
 textTemplateNamePlaceHolder = Name der Vorlage
 buttonSaveTemplate = Vorlage speichern
-buttonLoadTemplate = "Ausgewählte Vorlage laden
+buttonLoadTemplate = Ausgewählte Vorlage laden
 headingRemainingVacationDays = Verbleibende Urlaubstage
 headingUtilization = Auslastung
 addonDateStart = Datum von
