Add missing translations to the ProjectDetailPage

--- a/JobTracker/src/net/greenbeansit/jobtracker/client/localization/ProjectDetailPageConstants_de.properties
+++ b/JobTracker/src/net/greenbeansit/jobtracker/client/localization/ProjectDetailPageConstants_de.properties
@@ -1,7 +1,7 @@
 tabBudget = Budget
 tabTasks = Tasks
 tabEmployees = Mitarbeiter
-anchorBackward = Alle Projekte
+anchorBackward = < Alle Projekte
 infoFieldHeading = Information
 labelProjectName = Name:
 labelCustomerName = Kunde:
