Change name to jobnummer

--- a/JobTracker/src/net/greenbeansit/jobtracker/client/localization/ProjectPageConstants_de.properties
+++ b/JobTracker/src/net/greenbeansit/jobtracker/client/localization/ProjectPageConstants_de.properties
@@ -2,5 +2,5 @@ headingFilter = Filter
 selectCustomerPlaceHolder = Kunden auswählen
 selectCustomerLiveSearchPlaceHolder = Kundenname
 title = Alle Projekte
-columnHeaderName = Name
+columnHeaderName = Jobnummer
 columnHeaderBudget = Budget
