--- a/JobTracker/src/net/greenbeansit/jobtracker/client/localization/ApplicationConstants_de.properties
+++ b/JobTracker/src/net/greenbeansit/jobtracker/client/localization/ApplicationConstants_de.properties
@@ -1,5 +1,5 @@
 homePage = Home
 capacityPage = Kapazitätsplanung
 projectPage = Projekte
-managerPage = Manager
+managerPage = Mitarbeiter
 languageName = de
